QF: Overflow bug fix

--- a/components/sections/Included/Included.module.scss
+++ b/components/sections/Included/Included.module.scss
@@ -6,6 +6,7 @@
   grid-template-columns: 1fr 1fr;
   align-items: center;
   gap: 50px;
+  overflow: hidden;
 
   @include md {
     display: flex;
